[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pterratest"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/practiceops/pterratest"

[tool.poetry.dependencies]
python = "^3.8"
tenacity = "^8.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
boto3 = "^1.26.58"
isort = "^5.10.1"
pytest = "^7.2.1"
pytest-xdist = "^2.5.0"

[tool.black]
line-length    = 120
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "7.0"
addopts    = "-n auto"
testpaths = ["tests"]

log_cli       = true
log_cli_level = "WARNING"

log_file             = "pytest.log"
log_file_level       = "DEBUG"
log_file_format      = "%(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
