[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 120
preview = true
target-version = ['py38']

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
name = "pterratest"
readme = "README.md"
repository = "https://github.com/practiceops/pterratest"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.8"
tenacity = "^8.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
boto3 = "^1.26.58"
isort = "^5.10.1"
pre-commit = "^3.0.2"
pylint = "^2.16.0"
pytest = "^7.2.1"
pytest-xdist = "^3.1.0"

[tool.pylint]
disable = [
  "missing-module-docstring",
  "logging-fstring-interpolation"
]
good-names = "e,p"
max-line-length = 120

[tool.pytest.ini_options]
addopts = "-n auto"
log_cli = true
log_cli_level = "WARNING"
log_file = "pytest.log"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s"
log_file_level = "DEBUG"
minversion = "7.0"
testpaths = ["tests"]
